--- a/test.css
+++ b/test.css
@@ -2,13 +2,24 @@
     background-color: #dad4c5;
 }
 
+a{
+    color:#525775;
+    text-decoration: none;
+    background-color: #ebe7df;
+    padding:7px;
+}
+
+a:hover{
+    background-color: #bfac9e;
+}
+
 #enterName {
     float: left;
     display: inline-block;
     margin: 25px 40px;
     width: 500px;
     font-size: 20px;
-    color:#525775;
+    color:#5d5d5d;
     font-family: Calibri;
 }
 
