--- a/Alice/Alice.css
+++ b/Alice/Alice.css
@@ -34,14 +34,25 @@ aside{
 	background-color: #ebe7df;
 }
 
-aside p {
-	margin:20px 10px;
+aside h1 {
+	padding:15px 13px 15px 10px;
 	font-family: Copperplate Gothic Bold;
 	font-size: 19px; 
+	margin-bottom: 10px;
+	position: fixed;
+	border-bottom: 3px solid #9d8790;
+	background-color: #ebe7df;
+
+}
+
+aside p{
+	font-family:Berlin Sans FB;
+	margin:10px 10px;
 }
 
 #add{
 	text-align: center;
+	margin-top:65px;
 }
 
 section{
@@ -104,7 +115,7 @@ section{
 
 .ctext{
 	margin-right:50px;
-	margin-top:70px;
+	margin-top:50px;
 }
 
 
